--- a/index.html
+++ b/index.html
@@ -1325,19 +1325,29 @@
 
         const SCOPE = "https://www.googleapis.com/auth/drive.file";
 
-        function loadGapi() {
-          return new Promise((resolve) => {
-            gapi.load("client", async () => {
-              await gapi.client.init({
-                apiKey: API_KEY,
-                discoveryDocs: [
-                  "https://www.googleapis.com/discovery/v1/apis/drive/v3/rest",
-                ],
-              });
-              resolve();
-            });
-          });
+function loadGapi(retries = 3) {
+  return new Promise((resolve, reject) => {
+    gapi.load("client", async () => {
+      try {
+        await gapi.client.init({
+          apiKey: API_KEY,
+          discoveryDocs: [
+            "https://www.googleapis.com/discovery/v1/apis/drive/v3/rest",
+          ],
+        });
+        resolve();
+      } catch (e) {
+        if (retries > 0) {
+          setTimeout(() => resolve(loadGapi(retries - 1)), 800);
+        } else {
+          show("Drive service temporarily unavailable");
+          reject(e);
         }
+      }
+    });
+  });
+}
+
 
         // ——— BUTTONS ———
         const driveLogin = $("driveLogin");
