Add Google Fonts and update styles for improved typography and button interactions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       rel="apple-touch-icon"
       href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f6ac.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
