--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <meta name="apple-mobile-web-app-title" content="Smoke Timer" />
     <link
       rel="apple-touch-icon"
-      href="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/72x72/1f6ac.png"
+      href="https://cdn.jsdelivr.net/npm/remixicon/icons/Health/heart-pulse-fill.svg"
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -56,15 +57,17 @@
             <button id="pause" class="btn secondary" style="display: none">
               Pause
             </button>
-            <button id="reset" class="btn danger">Reset</button>
+
+            <div class="toolsRow">
+              <button id="reset" class="btn danger">Reset</button>
+              <button id="skip" class="btn">👍 Skip</button>
+            </div>
           </div>
 
           <div id="presets" class="pills"></div>
           <div id="status" class="info">
             <span id="statusText"></span>
           </div>
-
-          <button id="skip" class="btn">👍 Skip this cigarette</button>
           <div class="miniDisclaimer">
             ⚠️ Harm-reduction tool — not medical advice.
             <span id="openDisclaimer">Read more</span>
