update 2 files and create 2 files for sound

--- a/index.html
+++ b/index.html
@@ -434,9 +434,7 @@
       <div class="sub" style="margin-top: 6px">Please wait…</div>
     </div>
 
-    <audio id="ding">
-      <source src="data:audio/mp3;base64,//uQxA..." type="audio/mp3" />
-    </audio>
+    <audio id="ding" preload="auto"></audio>
 
     <script>
       const limitLabel = document.getElementById("limitLabel");
