--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
   </head>
@@ -330,6 +330,7 @@
 
     <!-- ===== TAB BAR ===== -->
     <div class="tabs">
+      <div id="tabIndicator"></div>
       <div class="tab active" data-tab="timer">
         <i class="bi bi-stopwatch"></i>Timer
       </div>
@@ -435,6 +436,61 @@
     </div>
 
     <audio id="ding" preload="auto"></audio>
+    <script>
+      const indicator = document.getElementById("tabIndicator");
+      const tabs = document.querySelectorAll(".tab");
+
+      function moveIndicator(tab) {
+        const rect = tab.getBoundingClientRect();
+        const parentRect = tab.parentElement.getBoundingClientRect();
+
+        gsap.to(indicator, {
+          x: rect.left - parentRect.left + rect.width / 2 - 32,
+          duration: 0.35,
+          ease: "power3.out",
+        });
+      }
+
+      function animatePageIn(page) {
+        const card = page.querySelector(".card");
+        if (!card) return;
+
+        gsap.fromTo(
+          card,
+          { y: 16, opacity: 0 },
+          { y: 0, opacity: 1, duration: 0.45, ease: "power3.out" }
+        );
+      }
+
+      tabs.forEach((tab) => {
+        tab.addEventListener("click", () => {
+          tabs.forEach((t) => t.classList.remove("active"));
+          tab.classList.add("active");
+
+          document
+            .querySelectorAll(".page")
+            .forEach((p) => p.classList.remove("active"));
+          const page = document.getElementById("tab-" + tab.dataset.tab);
+          page.classList.add("active");
+
+          moveIndicator(tab);
+          animatePageIn(page);
+        });
+      });
+
+      // initial position on load
+      window.addEventListener("load", () => {
+        const active = document.querySelector(".tab.active");
+        if (active) moveIndicator(active);
+
+        gsap.from(".tabs", {
+          y: 20,
+          opacity: 0,
+          duration: 0.5,
+          ease: "power3.out",
+        });
+      });
+    </script>
 
     <script>
       const limitLabel = document.getElementById("limitLabel");
@@ -511,6 +567,17 @@
     </script>
 
     <script>
+      function animatePageIn(page) {
+        const card = page.querySelector(".card");
+        if (!card) return;
+
+        gsap.fromTo(
+          card,
+          { y: 16, opacity: 0 },
+          { y: 0, opacity: 1, duration: 0.45, ease: "power3.out" }
+        );
+      }
+
       document.querySelectorAll(".tab").forEach((tab) => {
         tab.addEventListener("click", () => {
           document
@@ -521,9 +588,11 @@
           document
             .querySelectorAll(".page")
             .forEach((p) => p.classList.remove("active"));
-          document
-            .getElementById("tab-" + tab.dataset.tab)
-            .classList.add("active");
+
+          const page = document.getElementById("tab-" + tab.dataset.tab);
+          page.classList.add("active");
+
+          animatePageIn(page);
         });
       });
     </script>
@@ -544,7 +613,6 @@
       document.getElementById("discOk").onclick = () =>
         (discPopup.style.display = "none");
     </script>
-
     <script src="app.js"></script>
     <script src="drive.js"></script>
   </body>
