update app.js, index.html and settings.css

--- a/index.html
+++ b/index.html
@@ -243,15 +243,16 @@
           <div class="settingsGroupTitle">Reminders</div>
 
           <div class="metricBox actionGrid">
-            <div class="actionBtn" id="silent">
+            <div class="actionBtn reminders" id="silent">
               <i class="bi bi-volume-mute"></i>
               <span>Silent</span>
             </div>
 
-            <div class="actionBtn" id="reminder">
+            <div class="actionBtn reminders" id="reminder">
               <i class="bi bi-bell"></i>
               <span>10am</span>
             </div>
+            <span>Coming soon...</span>
           </div>
 
           <!-- PRESETS -->
